--- a/index.html
+++ b/index.html
@@ -76,11 +76,8 @@
 
       <div class="uk-flex uk-flex-left uk-flex-middle">
         <p class="uk-text-medium uk-padding-small">
-          Senior Ruby on Rails Engineer / QA with over 8 years of experience in developing scalable back-end systems
-          using microservices and CI/CD practices in agile environments. Proven expertise in building innovative
-          solutions, enhancing performance, and leading quality assurance efforts. Dedicated to continuous improvement,
-          excels in delivering high-quality software solutions, driving team success, and collaborating across teams
-          to meet business goals.
+          Senior Ruby on Rails Engineer with 8+ years of experience building scalable back-end systems and leading QA efforts.
+          Proven expertise in microservices, CI/CD, and delivering high-quality software in agile environments.
         </p>
         <img src="https://github.com/jacekmaciag/jacekmaciag.github.io/blob/master/res/me.jpg?raw=true" height="150" width="150" class="uk-border-circle hide-for-print">
       </div>
@@ -102,14 +99,16 @@
             <p>Aug 2023 - Oct 2024</p>
           </div>
           <ul class="uk-list uk-list-disc">
-            <li class="uk-margin-remove-top">Developed critical client-facing features for Toptal's back-end using Ruby on Rails.</li>
+            <li class="uk-margin-remove-top">Developed critical client-facing features for Toptal's back-end using Ruby on Rails, Sidekiq, Redis, and GraphQL.</li>
+            <li class="uk-margin-remove-top">Ensured proper coverage of unit tests utilizing RSpec and Cypress.</li>
+            <li class="uk-margin-remove-top">Enhanced platform's performance by optimizing SQL queries, indexes for PostgreSQL.</li>
             <li class="uk-margin-remove-top">Owned and delivered projects, ensuring timely completion and high quality.</li>
-            <li class="uk-margin-remove-top">Researched, designed, and implemented innovative solutions to enhance platform performance.</li>
+            <li class="uk-margin-remove-top">Researched, designed, and documented solutions with Jira, Confluence.</li>
             <li class="uk-margin-remove-top">Coordinated effectively with other teams and stakeholders to achieve project goals.</li>
           </ul>
           <div>
             <small>
-              Tools: Ruby on Rails, RSpec, Sidekiq, Redis, SQL, PostgreSQL, Docker, Kubernetes, GitHub Actions, GCP, Jira, Confluence, Grafana, Sentry, New Relic, Datadog
+              Tools: Ruby on Rails, RSpec, Sidekiq, Redis, SQL, PostgreSQL, GraphQL Docker, Kubernetes, GitHub Actions, GCP, Jira, Confluence, Grafana, Sentry, New Relic
             </small>
           </div>
 
@@ -120,14 +119,16 @@
             <p>Oct 2020 - Aug 2023</p>
           </div>
           <ul class="uk-list uk-list-disc">
-            <li class="uk-margin-remove-top">Coordinated quality assurance efforts among multiple teams at Toptal.</li>
-            <li class="uk-margin-remove-top">Developed automated testing scripts for client-facing systems.</li>
-            <li class="uk-margin-remove-top">Reviewed and tested new features to ensure high-quality deliverables.</li>
-            <li class="uk-margin-remove-top">Built innovative solutions to test functionality in a microservice environment.</li>
+            <li class="uk-margin-remove-top">Developed automated testing scripts for client-facing systems with Ruby on Rails, RSpec, and Selenium.</li>
+            <li class="uk-margin-remove-top">Built innovative solutions to test APIs in a microservice environment with Pact, GraphQL, Jenkins, and GitHub Actions.</li>
+            <li class="uk-margin-remove-top">Tested SQL query performance for a large PostgreSQL database.</li>
+            <li class="uk-margin-remove-top">Built CI/CD tools with Docker, Kubernetes, Jenkins, GitHub Actions, and GCP.</li>
+            <li class="uk-margin-remove-top">Conducted load testing sessions with JMeter.</li>
+            <li class="uk-margin-remove-top">Reviewed pull requests and tested new features to ensure high-quality deliverables.</li>
           </ul>
           <div>
             <small>
-              Tools: Ruby on Rails, RSpec, SQL, PostgreSQL, Selenium, Cucumber, Cypress, JMe Jenkins, GitHub Actions, GCP, Jira, Confluence, Grafana
+              Tools: Ruby on Rails, RSpec, SQL, PostgreSQL, Selenium, Cucumber, Cypress, Pact, JMeter, Jenkins, GitHub Actions, GCP, Jira, Confluence, Grafana
             </small>
           </div>
         </div>
@@ -150,9 +151,10 @@
             <p>Oct 2017 - Sep 2020</p>
           </div>
           <ul class="uk-list uk-list-disc">
-            <li class="uk-margin-remove-top">Conducted frontend and backend testing on 20+ applications, including functional, integration, and end-to-end testing.</li>
-            <li class="uk-margin-remove-top">Deployed and maintained applications in test environments, debugging mixed tech stack apps (Java, Ruby, JS, Scala) and providing detailed bug reports.</li>
-            <li class="uk-margin-remove-top">Collaborated remotely with a global team to ensure quality assurance for Welltok, Inc.</li>
+            <li class="uk-margin-remove-top">Conducted frontend and backend testing on 20+ applications, including functional, integration, and end-to-end testing for a Ruby on Rails application using Selenium and Gherkin.</li>
+            <li class="uk-margin-remove-top">Performed API testing with Postman and load testing with JMeter.</li>
+            <li class="uk-margin-remove-top">Utilized and maintained a vast test repository with Jira and Zephyr, reporting testing session results to stake-holders and handling bug tickets.</li>
+            <li class="uk-margin-remove-top">Deployed applications in test environments, debugging mixed tech stack apps (Java, Ruby, JavaScript, Scala).</li>
           </ul>
           <div>
             <small>
@@ -185,7 +187,7 @@
           </ul>
           <div>
             <small>
-              Tools: WordPress, JavaScript, Confluence
+              Tools: WordPress, Salesforce, JavaScript, Confluence
             </small>
           </div>
         </div>
@@ -210,10 +212,10 @@
             <p>Jun 2017 - Oct 2017</p>
           </div>
           <ul class="uk-list uk-list-disc">
-            <li class="uk-margin-remove-top">Tested frontend and backend with automated test scripts.</li>
-            <li class="uk-margin-remove-top">Reported and analyzed defects.</li>
-            <li class="uk-margin-remove-top">Developed an automated test framework.</li>
-            <li class="uk-margin-remove-top">Worked in a RESTful web services environment.</li>
+            <li class="uk-margin-remove-top">Tested frontend and backend with automated test scripts written with Java, TestNG, JavaScript, and JEST.</li>
+            <li class="uk-margin-remove-top">Reported and analyzed defects utilizing Jira (with Zephyr), Confluence, and Grafana boards for stats.</li>
+            <li class="uk-margin-remove-top">Performed API tests with REST Assured and Retrofit, including load testing with JMeter.</li>
+            <li class="uk-margin-remove-top">Developed an automated Selenium-based test framework.</li>
           </ul>
           <div>
             <small>
@@ -240,10 +242,11 @@
             <p>Nov 2015 - May 2017</p>
           </div>
           <ul class="uk-list uk-list-disc">
-            <li class="uk-margin-remove-top">Designed, prepared and executed both manual and automated test scripts.</li>
-            <li class="uk-margin-remove-top">Written test plan and strategy documents</li>
-            <li class="uk-margin-remove-top">Reported and analysed defects.</li>
-            <li class="uk-margin-remove-top">Developed an automated test framework for Corporate Actions systems.</li>
+
+            <li class="uk-margin-remove-top">Developed an automated test framework for Corporate Actions systems with Java and Selenium.</li>
+            <li class="uk-margin-remove-top">Performed API testing with Postman.</li>
+            <li class="uk-margin-remove-top">Designed, prepared and executed both manual and automated test scripts with Jira.</li>
+            <li class="uk-margin-remove-top">Written test plan and strategy documents with Confluence.</li>
             <li class="uk-margin-remove-top">Shared knowledge and provided help to non-business team members.</li>
             <li class="uk-margin-remove-top">Provided assistance to UAT and production environment users.</li>
           </ul>
@@ -277,20 +280,16 @@
       <div class="uk-card">
         <div class="uk-card-default uk-card-body uk-padding-remove-top">
           <div uk-grid class="uk-flex-between">
-            <div class="hide-for-print">
-              <a href="https://github.com/jacekmaciag/xtb" target="_blank" class="uk-link-text uk-text-medium">
-                XTB API client Ruby gem
-              </a>
-            </div>
-            <div class="show-for-print">
-              <p>XTB API client Ruby gem (https://github.com/jacekmaciag/xtb)</p>
-            </div>
-            <p>Jul 2024 - Present</p>
+            <p>Schema Check for GraphQL Federation architecture model <span class="uk-text-meta">(as Senior QA Automation Engineer for Toptal)</span></p>
+            <p>Feb 2022 - Oct 2024</p>
           </div>
           <p>
-            An open-source Ruby implementation of the XTB API client for a leading Forex and CFD broker.
-            The project aims to evaluate the XTB API's functionality and provide Ruby developers with a complete
-            solution to interact with the broker's API. It supports both HTTPS and WebSocket (WSS) connections.
+            Owned, planned, developed, and maintained an API testing solution that prevented bugs caused by incompatible
+            GraphQL schemas in a microservice environment using the GraphQL Federation architecture model.
+            The project was built with GitHub Actions workflows and implemented across approximately 20 back-end and
+            front-end applications. It has become the go-to CI check for GraphQL schema compatibility within the
+            company, executing on each pull request and deployment cycle. As a result, it has effectively reduced
+            to zero the number of bugs caused by deploying incompatible schemas to production.
           </p>
         </div>
       </div>
@@ -318,16 +317,20 @@
       <div class="uk-card">
         <div class="uk-card-default uk-card-body uk-padding-remove-top">
           <div uk-grid class="uk-flex-between">
-            <p>Schema Check for services utilizing GraphQL Federation architecture model <span class="uk-text-meta">(as Senior QA Automation Engineer for Toptal)</span></p>
-            <p>Feb 2022 - Oct 2024</p>
+            <div class="hide-for-print">
+              <a href="https://github.com/jacekmaciag/xtb" target="_blank" class="uk-link-text uk-text-medium">
+                XTB API client Ruby gem
+              </a>
+            </div>
+            <div class="show-for-print">
+              <p>XTB API client Ruby gem (https://github.com/jacekmaciag/xtb)</p>
+            </div>
+            <p>Jul 2024 - Present</p>
           </div>
           <p>
-            Owned, planned, developed, and maintained a CI/CD project that prevented bugs caused by incompatible
-            GraphQL schemas in a microservice environment using the GraphQL Federation architecture model.
-            The project was built with GitHub Actions workflows and implemented across approximately 20 back-end and
-            front-end applications. It has become the go-to CI check for GraphQL schema compatibility within the
-            company. As a result, it has effectively reduced to zero the number of bugs caused by deploying
-            incompatible schemas to production.
+            An open-source Ruby implementation of the XTB API client for a leading Forex and CFD broker.
+            The project aims to evaluate the XTB API's functionality and provide Ruby developers with a complete
+            solution to interact with the broker's API. It supports both HTTPS and WebSocket (WSS) connections.
           </p>
         </div>
       </div>
@@ -341,52 +344,43 @@
           <div class="uk-card uk-card-default uk-card-body uk-padding-remove-top uk-padding-remove-right">
             <div class="uk-grid uk-flex-between uk-margin-remove-top">
               <p>Ruby on Rails</p>
-              <span>★★★★★</span>
             </div>
             <div class="uk-grid uk-flex-between uk-margin-remove-top">
-              <p>Software Development</p>
-              <p>★★★★★</p>
+              <p>Java</p>
             </div>
+            <div class="uk-grid uk-flex-between uk-margin-remove-top">
+              <p>JavaScript</p>
+            </div>
+          </div>
+
+          <div class="uk-card uk-card-default uk-card-body uk-padding-remove-top uk-padding-remove-right">
+            <div class="uk-grid uk-flex-between uk-margin-remove-top">
+              <p>Test Automation</p>
+            </div>
+            <div class="uk-grid uk-flex-between uk-margin-remove-top">
+              <p>API Testing</p>
+            </div>
+            <div class="uk-grid uk-flex-between uk-margin-remove-top">
+              <p>Load Testing</p>
+            </div>
+            <div class="uk-grid uk-flex-between uk-margin-remove-top">
+              <p>Security Testing</p>
+            </div>
+          </div>
+
+          <div class="uk-card uk-card-default uk-card-body uk-padding-remove-top uk-padding-remove-right">
             <div class="uk-grid uk-flex-between uk-margin-remove-top">
               <p>Problem Solving</p>
-              <p>★★★★★</p>
             </div>
             <div class="uk-grid uk-flex-between uk-margin-remove-top">
               <p>Agile Methodologies</p>
-              <p>★★★★★</p>
-            </div>
-          </div>
-
-          <div class="uk-card uk-card-default uk-card-body uk-padding-remove-top uk-padding-remove-right">
-
-            <div class="uk-grid uk-flex-between uk-margin-remove-top">
-              <p>Teamwork</p>
-              <p>★★★★★</p>
-            </div>
-            <div class="uk-grid uk-flex-between uk-margin-remove-top">
-              <p>Test Automation</p>
-              <p>★★★★★</p>
             </div>
             <div class="uk-grid uk-flex-between uk-margin-remove-top">
               <p>Attention to Detail</p>
-              <p>★★★★★</p>
-            </div>
-            <div class="uk-grid uk-flex-between uk-margin-remove-top">
-              <p>Microservices</p>
-              <p>★★★★</p>
             </div>
           </div>
 
-          <div class="uk-card uk-card-default uk-card-body uk-padding-remove-top uk-padding-remove-right">
-            <div class="uk-grid uk-flex-between uk-margin-remove-top">
-              <p>GitHub</p>
-              <p>★★★★</p>
-            </div>
-            <div class="uk-grid uk-flex-between uk-margin-remove-top">
-              <p>CI/CD</p>
-              <p>★★★</p>
-            </div>
-          </div>
+
         </div>
       </div>
 
@@ -441,6 +435,7 @@
         <div class="uk-card-default uk-card-body uk-padding-remove-top">
           <div uk-grid class="uk-flex-between">
             <p>Issued Dec 2016</p>
+            <p>Demonstrates foundational knowledge in software testing processes and techniques.</p>
           </div>
         </div>
       </div>
